--- a/src/notes/02css/03.md
+++ b/src/notes/02css/03.md
@@ -1,17 +1,87 @@
 :::snippet CSS3 背景属性
 
-| 属性                | 描述                                                                    |
-| ------------------- | ----------------------------------------------------------------------- |
-| `background-clip`   | 指定对象的背景图像向外裁剪的区域。                                      |
-| `background-origin` | S 设置或检索对象的背景图像计算 background-position 时的参考原点(位置)。 |
-| `background-size`   | 检索或设置对象的背景图像的尺寸大小。                                    |
+| 属性                | 描述                                                                  |
+| ------------------- | --------------------------------------------------------------------- |
+| `background-clip`   | 指定对象的背景图像向外裁剪的区域。                                    |
+| `background-origin` | 设置或检索对象的背景图像计算 background-position 时的参考原点(位置)。 |
+| `background-size`   | 检索或设置对象的背景图像的尺寸大小。                                  |
+
+```html
+<style>
+  div.background-clip {
+    border: 10px dotted black;
+    padding: 25px;
+    background: yellow;
+    background-clip: padding-box;
+  }
+  div.background-origin {
+    border: 1px solid black;
+    padding: 35px;
+    background-image: url("https://www.runoob.com/try/demo_source/smiley.gif");
+    background-repeat: no-repeat;
+    background-position: left;
+    background-origin: border-box;
+  }
+  div.background-size {
+    background: url(https://www.runoob.com/try/demo_source/img_flwr.gif);
+    background-size: 80px 60px;
+    background-repeat: no-repeat;
+    padding-top: 40px;
+  }
+</style>
+<p>没有背景剪裁 (border-box没有定义):</p>
+<div class="background-clip">
+  <h2>好了歌</h2>
+  <p>
+    世人都晓神仙好,惟有功名忘不了!  古今将相在何方?荒冢一堆草没了。<br />
+    世人都晓神仙好,只有金银忘不了!  终朝只恨聚无多,及到多时眼闭了。<br />
+    世人都晓神仙好,只有娇妻忘不了!  君生日日说恩情,君死又随人去了。<br />
+    世人都晓神仙好,只有儿孙忘不了!  痴心父母古来多,孝顺儿孙谁见了?<br />
+  </p>
+</div>
+<div class="background-origin">
+  <h2>三教</h2>
+  <p>
+    忠义荡然，儒溺千古。<br />
+    大爱无情，佛灭众生。<br />
+    天地不仁，道吞万物。<br />
+  </p>
+</div>
+<br />
+<div class="background-size">
+  <p>
+    缩小图片:
+    <img
+      src="https://www.runoob.com/try/demo_source/img_flwr.gif"
+      alt="Flowers"
+      width="80"
+      height="60"
+    />
+  </p>
+  <p>
+    原始图片:
+    <img
+      src="https://www.runoob.com/try/demo_source/img_flwr.gif"
+      alt="Flowers"
+      width="224"
+      height="162"
+    />
+  </p>
+</div>
+```
 
 :::
 
 :::snippet CSS3 边框(Border) 和 轮廓(Outline) 属性
 
+border-image 属性是速记属性用于设置 border-image-source, border-image-slice 和 border-image-repeat 的值。
+省略的值设置为它们的默认值。
+
 | 属性                         | 描述                                                                         |
 | ---------------------------- | ---------------------------------------------------------------------------- |
+| `border-radius`              | 设置或检索对象使用圆角边框。                                                 |
+| `border-top-left-radius`     | 定义左上角边框的形状。                                                       |
+| `border-top-right-radius`    | 定义右上角边框的形状。                                                       |
 | `border-bottom-left-radius`  | 设置或检索对象的左下角圆角边框。提供 2 个参数。                              |
 | `border-bottom-right-radius` | 设置或检索对象的右下角圆角边框。                                             |
 | `border-image`               | 设置或检索对象的边框样式使用图像来填充。                                     |
@@ -20,66 +90,147 @@
 | `border-image-slice`         | 规定图像边框的向内偏移。                                                     |
 | `border-image-source`        | 规定要使用的图像，代替 border-style 属性中设置的边框样式。                   |
 | `border-image-width`         | 规定图像边框的宽度。                                                         |
-| `border-radius`              | 设置或检索对象使用圆角边框。                                                 |
-| `border-top-left-radius`     | 定义左上角边框的形状。                                                       |
-| `border-top-right-radius`    | 定义右上角边框的形状。                                                       |
-| `box-decoration-break`       | 规定行内元素被折行                                                           |
 | `box-shadow`                 | 向方框添加一个或多个阴影。                                                   |
 
-:::
-
-:::snippet CSS3 媒体页面内容属性
-
-| 属性                  | 描述                                                       |
-| --------------------- | ---------------------------------------------------------- |
-| `bookmark-label`      | 指定书签的标签                                             |
-| `bookmark-level`      | 指定了书签级别                                             |
-| `bookmark-target`     | 指定了书签链接的目标                                       |
-| `float-offset`        | 在相反的方向推动浮动元素，他们一直具有浮动                 |
-| `hyphenate-after`     | 指定一个断字的单词断字字符后的最少字符数                   |
-| `hyphenate-before`    | 指定一个断字的单词断字字符前的最少字符数                   |
-| `hyphenate-character` | 指定了当一个断字发生时，要显示的字符串                     |
-| `hyphenate-lines`     | 表示连续断字的行在元素的最大数目                           |
-| `hyphenate-resource`  | 外部资源指定一个逗号分隔的列表，可以帮助确定浏览器的断字点 |
-| `hyphens`             | 设置如何分割单词以改善该段的布局                           |
-| `image-resolution`    | 指定了正确的图像分辨率                                     |
-| `marks`               | 将 crop and/or cross 标志添加到文档                        |
+```html
+<style>
+  div.border-radius {
+    border: 2px solid #a1a1a1;
+    padding: 10px 40px;
+    background: #dddddd;
+    width: 300px;
+    border-radius: 10px;
+  }
+  div.border-top-left-radius {
+    border: 2px solid #a1a1a1;
+    padding: 10px 40px;
+    background: #dddddd;
+    width: 300px;
+    border-top-left-radius: 10px;
+  }
+  div.box-shadow {
+    width: 300px;
+    height: 100px;
+    background-color: yellow;
+    box-shadow: 10px 10px 5px #888888;
+  }
+  div .border-image-1 {
+    border: 10px solid transparent;
+    padding: 15px;
+    /* border-image-source (url), border-image-slice,  和border-image-repeat 的值。 */
+    -webkit-border-image: url(https://www.runoob.com/images/border.png) 30 round;
+    /* Safari 3.1-5 */
+    -o-border-image: url(https://www.runoob.com/images/border.png) 30 round;
+    /* Opera 11-12.1 */
+    border-image: url(https://www.runoob.com/images/border.png) 30 round;
+    /* border-image-width: 30 30; 
+       border-image-outset: 0 0; */
+  }
+  div .border-image-2 {
+    border: 10px solid transparent;
+    padding: 15px;
+    -webkit-border-image: url(https://www.runoob.com/images/border.png) 30
+      stretch;
+    /* Safari 3.1-5 */
+    -o-border-image: url(https://www.runoob.com/images/border.png) 30 stretch;
+    /* Opera 11-12.1 */
+    border-image: url(https://www.runoob.com/images/border.png) 30 stretch;
+  }
+</style>
+<div>
+  <p>border-image 属性用于指定一个元素的边框图像。</p>
+  <p class="border-image-1">在这里，图像平铺（重复），以填补该地区。</p>
+  <p class="border-image-2">在这里，图像被拉伸以填补该地区</p>
+  <p>这是原始图片:</p>
+  <img src="https://www.runoob.com/images/border.png" />
+  <p>
+    <b>注意:</b> Internet Explorer 10 及更早的版本不支持 border-image 属性。
+  </p>
+</div>
+```
 
 :::
 
 :::snippet CSS3 字体（Font） 属性
 
-| 属性               | 描述                                                      |
-| ------------------ | --------------------------------------------------------- |
-| `@font-face`       | 一个规则，允许网站下载并使用其他超过"Web- safe"字体的字体 |
-| `font-size-adjust` | 为元素规定 aspect 值                                      |
-| `font-stretch`     | 收缩或拉伸当前的字体系列                                  |
+| 属性         | 描述                                                      |
+| ------------ | --------------------------------------------------------- |
+| `@font-face` | 一个规则，允许网站下载并使用其他超过"Web- safe"字体的字体 |
 
-:::
-
-:::snippet CSS3 内容生成属性(Generated Content Properties)
-
-| 属性          | 描述                                                     |
-| ------------- | -------------------------------------------------------- |
-| `crop`        | 允许 replaced 元素只是作为一个对象代替整个对象的矩形区域 |
-| `move-to`     | 从流中删除元素，然后在文档中后面的点上重新插入。         |
-| `page-policy` | 判定基于页面的给定元素的适用于计数器的字符串值           |
+```html
+<style>
+  @font-face {
+    font-family: myFirstFont;
+    src: url("Sansation_Light.ttf");
+  }
+  div.font-family {
+    font-family: myFirstFont;
+  }
+</style>
+<div class="font-family">
+  使用 CSS3,网站终于可以使用字体以外的预先选择“合法”字体
+</div>
+```
 
 :::
 
 :::snippet CSS3 文本（Text） 属性
 
-| 属性                  | 描述                                                  |
-| --------------------- | ----------------------------------------------------- |
-| `hanging-punctuation` | 指定一个标点符号是否可能超出行框                      |
-| `punctuation-trim`    | 指定一个标点符号是否要去掉                            |
-| `text-align-last`     | 当 text-align 设置为 justify 时，最后一行的对齐方式。 |
-| `text-justify`        | 当 text-align 设置为 justify 时指定分散对齐的方式。   |
-| `text-outline`        | 设置文字的轮廓。                                      |
-| `text-overflow`       | 指定当文本溢出包含的元素，应该发生什么                |
-| `text-shadow`         | 为文本添加阴影                                        |
-| `text-wrap`           | 指定文本换行规则                                      |
-| `word-break`          | 指定非 CJK 文字的断行规则                             |
-| `word-wrap`           | 设置浏览器是否对过长的单词进行换行。                  |
+| 属性            | 描述                                   |
+| --------------- | -------------------------------------- |
+| `text-overflow` | 指定当文本溢出包含的元素，应该发生什么 |
+| `text-shadow`   | 为文本添加阴影                         |
+| `word-break`    | 指定非 CJK 文字的断行规则              |
+| `word-wrap`     | 设置浏览器是否对过长的单词进行换行。   |
+
+```html
+<style>
+  h1 {
+    text-shadow: 2px 2px #ff0000;
+  }
+  p.word-wrap {
+    width: 11em;
+    border: 1px solid #000000;
+    word-wrap: break-word;
+  }
+  p.word-break-1 {
+    width: 11em;
+    border: 1px solid #000000;
+    word-break: keep-all;
+  }
+  p.word-break-2 {
+    width: 11em;
+    border: 1px solid #000000;
+    word-break: break-all;
+  }
+  div.overflow {
+    white-space: nowrap;
+    width: 25em;
+    overflow: hidden;
+    border: 1px solid #000000;
+  }
+</style>
+<h1>Text-shadow effect</h1>
+<p class="word-wrap">
+  设置浏览器是否对过长的单词进行换行。 This paragraph contains a very long word:
+  thisisaveryveryveryveryveryverylongword. The long word will break and wrap to
+  the next line.
+</p>
+<p class="word-break-1">
+  指定非 CJK 文字的断行规则。 This paragraph contains a very long word:
+  thisisaveryveryveryveryveryverylongword. The long word will break and wrap to
+  the next line.
+</p>
+<p class="word-break-2">
+  指定非 CJK 文字的断行规则。 This paragraph contains a very long word:
+  thisisaveryveryveryveryveryverylongword. The long word will break and wrap to
+  the next line.
+</p>
+
+<div class="overflow" style="text-overflow:ellipsis;">
+  指定当文本溢出包含的元素... This is some long text that will not fit in the
+  box
+</div>
+```
 
 :::
