--- a/src/notes/02css/04.md
+++ b/src/notes/02css/04.md
@@ -1,26 +1,57 @@
 :::snippet CSS3 盒子(Box) 属性
 
-| 属性             | 描述                                                        |
-| ---------------- | ----------------------------------------------------------- |
-| `overflow-x`     | 如果内容溢出了元素内容区域，是否对内容的左/右边缘进行裁剪。 |
-| `overflow-y`     | 如果内容溢出了元素内容区域，是否对内容的上/下边缘进行裁剪。 |
-| `overflow-style` | 规定溢出元素的首选滚动方法。                                |
-| `rotation`       | 围绕由 rotation-point 属性定义的点对元素进行旋转。          |
-| `rotation-point` | 定义距离上左边框边缘的偏移点。                              |
+| 属性         | 描述                                                        |
+| ------------ | ----------------------------------------------------------- |
+| `overflow-x` | 如果内容溢出了元素内容区域，是否对内容的左/右边缘进行裁剪。 |
+| `overflow-y` | 如果内容溢出了元素内容区域，是否对内容的上/下边缘进行裁剪。 |
+
+```html
+<style>
+  div.overflow {
+    width: 360px;
+    height: 110px;
+    border: thin solid black;
+    overflow-x: scroll;
+    overflow-y: scroll;
+  }
+</style>
+<div class="overflow">
+  <p style="width:500px">
+    世人都晓神仙好,惟有功名忘不了!  古今将相在何方?荒冢一堆草没了。
+    世人都晓神仙好,只有金银忘不了!  终朝只恨聚无多,及到多时眼闭了。
+    世人都晓神仙好,只有娇妻忘不了!  君生日日说恩情,君死又随人去了。
+    世人都晓神仙好,只有儿孙忘不了!  痴心父母古来多,孝顺儿孙谁见了?
+  </p>
+</div>
+```
 
 :::
 
 :::snippet CSS3 颜色(Color) 属性
 
-| 属性               | 描述                                       |
-| ------------------ | ------------------------------------------ |
-| `color-profile`    | 允许使用源的颜色配置文件的默认以外的规范   |
-| `opacity`          | 设置一个元素的透明度级别                   |
-| `rendering-intent` | 允许超过默认颜色配置文件渲染意向的其他规范 |
+| 属性      | 描述                     |
+| --------- | ------------------------ |
+| `opacity` | 设置一个元素的透明度级别 |
+
+```html
+<style>
+  div.opacity {
+    background-color: red;
+    opacity: 0.5;
+    filter: Alpha(opacity=50);
+  }
+</style>
+<div class="opacity">
+  This element's opacity is 0.5! Note that both the text and the
+  background-color are affected by the opacity level!
+</div>
+```
 
 :::
 
 :::snippet CSS3 弹性盒子模型（Flexible Box） 属性(新)
+
+flex: flex-grow flex-shrink flex-basis|auto|initial|inherit;
 
 | 属性              | 描述                                                                         |
 | ----------------- | ---------------------------------------------------------------------------- |
@@ -37,63 +68,145 @@
 | `justify-content` | 设置或检索弹性盒子元素在主轴（横轴）方向上的对齐方式。                       |
 | `order`           | 设置或检索弹性盒模型对象的子元素出现的順序。                                 |
 
-:::
+```html
+<style>
+  div.justify-content {
+    width: 500px;
+    height: 150px;
+    border: 1px solid #c3c3c3;
+    display: -webkit-flex;
+    /* Safari */
+    -webkit-justify-content: space-around;
+    /* Safari 6.1+ */
+    display: flex;
+    justify-content: space-around;
+  }
 
-:::snippet CSS3 弹性盒子模型（Flexible Box） 属性(旧)
+  div.justify-content div {
+    width: 80px;
+    height: 80px;
+  }
 
-| 属性                | 描述                                                 |
-| ------------------- | ---------------------------------------------------- |
-| `box-align`         | 指定如何对齐一个框的子元素                           |
-| `box-direction`     | 指定在哪个方向，显示一个框的子元素                   |
-| `box-flex`          | 指定一个框的子元素是否是灵活的或固定的大小           |
-| `box-flex-group`    | 指派灵活的元素到 Flex 组                             |
-| `box-lines`         | 每当它在父框的空间运行时，是否指定将再上一个新的行列 |
-| `box-ordinal-group` | 指定一个框的子元素的显示顺序                         |
-| `box-orient`        | 指定一个框的子元素是否在水平或垂直方向应铺设         |
-| `box-pack`          | 指定横向盒在垂直框的水平位置和垂直位置               |
+  /* Safari 6.1+ */
+  div#myRedDIV {
+    order: 2;
+    -webkit-order: 2;
+  }
 
-:::
+  div#myBlueDIV {
+    order: 4;
+    -webkit-order: 4;
+  }
 
-:::snippet CSS3 网格（Grid） 属性
+  div#myGreenDIV {
+    order: 3;
+    -webkit-order: 3;
+  }
 
-| 属性           | 描述                   |
-| -------------- | ---------------------- |
-| `grid-columns` | 指定在网格中每列的宽度 |
-| `grid-rows`    | 指定在网格中每列的高度 |
+  div#myPinkDIV {
+    order: 1;
+    -webkit-order: 1;
+  }
 
-:::
+  div.flex {
+    width: 220px;
+    height: 300px;
+    border: 1px solid black;
+    display: flex;
+  }
 
-:::snippet CSS3 超链接(Hyperlink) 属性
+  div.flex div {
+    flex: 1;
+    -webkit-flex: 1;
+  }
 
-| 属性              | 描述                                                         |
-| ----------------- | ------------------------------------------------------------ |
-| `target`          | 简写属性设置 target-name, target-new,和 target-position 属性 |
-| `target-name`     | 指定在何处打开链接（目标位置）                               |
-| `target-new`      | 指定是否有新的目标链接打开一个新窗口或在现有窗口打开新标签   |
-| `target-position` | 指定应该放置新的目标链接的位置                               |
+  div.flex-wrap {
+    width: 200px;
+    height: 200px;
+    border: 1px solid #c3c3c3;
+    display: -webkit-flex;
+    /* Safari */
+    -webkit-flex-wrap: wrap;
+    /* Safari 6.1+ */
+    display: flex;
+    flex-wrap: wrap;
+    /* 元素内弹性盒元素的方向为相反的顺序 */
+    flex-direction: row-reverse;
+    -webkit-flex-direction: row-reverse;
+    /* Safari 6.1+ */
+    /* 让弹性盒的元素以相反的顺序显示，且在必要的时候进行拆行 */
+    flex-flow: row-reverse wrap;
+    -webkit-flex-flow: row-reverse wrap;
+  }
 
-:::
+  div.flex-wrap div {
+    width: 50px;
+    height: 50px;
+  }
 
-:::snippet CSS3 线框(Linebox) 属性
+  div.flex-grow {
+    width: 350px;
+    height: 100px;
+    border: 1px solid #c3c3c3;
+    display: flex;
+  }
 
-| 属性                         | 描述                                                                                    |
-| ---------------------------- | --------------------------------------------------------------------------------------- |
-| `alignment-adjust`           | 允许更精确的元素的对齐方式                                                              |
-| `alignment-baseline`         | 其父级指定的内联级别的元素如何对齐                                                      |
-| `baseline-shift`             | 允许重新定位相对于 dominant-baseline 的 dominant-baseline                               |
-| `dominant-baseline`          | 指定 scaled-baseline-table                                                              |
-| `drop-initial-after-adjust`  | 设置下拉的主要连接点的初始对齐点                                                        |
-| `drop-initial-after-align`   | 校准行内的初始行的设置就是具有首字母的框使用初级连接点                                  |
-| `drop-initial-before-adjust` | 设置下拉的辅助连接点的初始对齐点                                                        |
-| `drop-initial-before-align`  | 校准行内的初始行的设置就是具有首字母的框使用辅助连接点                                  |
-| `drop-initial-size`          | 控制局部的首字母下沉                                                                    |
-| `drop-initial-value`         | 激活一个下拉式的初步效果                                                                |
-| `inline-box-align`           | 设置一个多行的内联块内的行具有前一个和后一个内联元素的对齐                              |
-| `line-stacking`              | 一个速记属性设置 line-stacking-strategy, line-stacking-ruby,和 line-stacking-shift 属性 |
-| `line-stacking-ruby`         | 设置包含 Ruby 注释元素的行对于块元素的堆叠方法                                          |
-| `line-stacking-shift`        | 设置 base-shift 行中块元素包含元素的堆叠方法                                            |
-| `line-stacking-strategy`     | 设置内部包含块元素的堆叠线框的堆叠方法                                                  |
-| `text-height`                | 行内框的文本内容区域设置 block-progression 维数                                         |
+  div.flex-grow div:nth-of-type(1) {
+    flex-grow: 1;
+  }
+
+  div.flex-grow div:nth-of-type(2) {
+    flex-grow: 3;
+  }
+
+  div.flex-grow div:nth-of-type(3) {
+    flex-grow: 1;
+    -webkit-flex-basis: 80px;
+    flex-basis: 80px;
+  }
+
+  div.flex-grow div:nth-of-type(4) {
+    flex-grow: 1;
+  }
+
+  div.flex-grow div:nth-of-type(5) {
+    flex-grow: 1;
+  }
+</style>
+<div class="justify-content">
+  <div style="background-color:coral;" id="myRedDIV">元素第1。order:2。</div>
+  <div style="background-color:lightblue;" id="myBlueDIV">
+    元素第2。order:4。
+  </div>
+  <div style="background-color:lightgreen;" id="myGreenDIV">
+    元素第3。order:3。
+  </div>
+  <div style="background-color:pink;" id="myPinkDIV">元素第4。order:1。</div>
+</div>
+<br />
+<div class="flex">
+  <div style="background-color:coral;">红色</div>
+  <div style="background-color:lightblue;">蓝色</div>
+  <div style="background-color:lightgreen;">带有更多内容的绿色 div</div>
+</div>
+<br />
+<div class="flex-wrap">
+  <div style="background-color:coral;">A</div>
+  <div style="background-color:lightblue;">B</div>
+  <div style="background-color:khaki;">C</div>
+  <div style="background-color:pink;">D</div>
+  <div style="background-color:lightgrey;">E</div>
+  <div style="background-color:lightgreen;">F</div>
+</div>
+<br />
+<div class="flex-grow">
+  <div style="background-color:coral;"></div>
+  <div style="background-color:lightblue;"></div>
+  <div style="background-color:khaki;"></div>
+  <div style="background-color:pink;"></div>
+  <div style="background-color:lightgrey;"></div>
+</div>
+```
 
 :::
 
@@ -101,6 +214,7 @@
 
 | 属性                | 描述                                      |
 | ------------------- | ----------------------------------------- |
+| `columns`           | 缩写属性设置列宽和列数                    |
 | `column-count`      | 指定元素应该分为的列数                    |
 | `column-fill`       | 指定如何填充列                            |
 | `column-gap`        | 指定列之间的差距                          |
@@ -110,23 +224,5 @@
 | `column-rule-width` | 指定列之间的宽度规则                      |
 | `column-span`       | 指定元素应该跨越多少列                    |
 | `column-width`      | 指定列的宽度                              |
-| `columns`           | 缩写属性设置列宽和列数                    |
-
-:::
-
-:::snippet CSS3 用户外观(User-interface) 属性
-
-| 属性             | 描述                                     |
-| ---------------- | ---------------------------------------- |
-| `appearance`     | 定义元素的外观样式                       |
-| `box-sizing`     | 允许您为了适应区域以某种方式定义某些元素 |
-| `icon`           | 为元素指定图标                           |
-| `nav-down`       | 指定用户按向下键时向下导航的位置         |
-| `nav-index`      | 指定导航（tab）顺序。                    |
-| `nav-left`       | 指定用户按向左键时向左导航的位置         |
-| `nav-right`      | 指定用户按向右键时向左导航的位置         |
-| `nav-up`         | 指定用户按向上键时向上导航的位置         |
-| `outline-offset` | 设置轮廓框架在 border 边缘外的偏移       |
-| `resize`         | 定义元素是否可以改变大小                 |
 
 :::
