--- a/src/notes/02css/03.md
+++ b/src/notes/02css/03.md
@@ -1,3 +1,17 @@
+:::snippet 浏览器前缀
+
+| 浏览器前缀    | 浏览器                                    |
+| -------- | -------------------------------------- |
+| -webkit- | Google Chrome, Safari, Android Browser |
+| -moz-    | Firefox                                |
+| -o-      | Opera                                  |
+| -ms-     | Internet Explorer, Edge                |
+| -khtml-  | Konqueror                              |
+
+后面我们会有 常用的解决Html5和Css3 的兼容解决文件。
+
+:::
+
 :::snippet CSS3 背景属性
 
 | 属性                | 描述                                                                  |
@@ -123,7 +137,7 @@ border-image 属性是速记属性用于设置 border-image-source, border-image
     -o-border-image: url(https://www.runoob.com/images/border.png) 30 round;
     /* Opera 11-12.1 */
     border-image: url(https://www.runoob.com/images/border.png) 30 round;
-    /* border-image-width: 30 30; 
+    /* border-image-width: 30 30;
        border-image-outset: 0 0; */
   }
   div .border-image-2 {
