--- a/src/notes/02css/04.md
+++ b/src/notes/02css/04.md
@@ -216,13 +216,57 @@ flex: flex-grow flex-shrink flex-basis|auto|initial|inherit;
 | ------------------- | ----------------------------------------- |
 | `columns`           | 缩写属性设置列宽和列数                    |
 | `column-count`      | 指定元素应该分为的列数                    |
-| `column-fill`       | 指定如何填充列                            |
 | `column-gap`        | 指定列之间的差距                          |
+| `column-span`       | 指定元素应该跨越多少列                    |
+| `column-width`      | 指定列的宽度                              |
 | `column-rule`       | 对于设置所有 column-rule-\*属性的简写属性 |
 | `column-rule-color` | 指定列之间的颜色规则                      |
 | `column-rule-style` | 指定列之间的样式规则                      |
 | `column-rule-width` | 指定列之间的宽度规则                      |
-| `column-span`       | 指定元素应该跨越多少列                    |
-| `column-width`      | 指定列的宽度                              |
+
+```html
+<style>
+  .columns {
+    /* columns: column-width column-count; */
+    columns: 100px 3;
+    -webkit-columns: 100px 3;
+    -moz-columns: 100px 3;
+    column-gap: 80px;
+    -moz-column-gap: 80px;
+    -webkit-column-gap: 80px;
+    /* column-rule: column-rule-width column-rule-style column-rule-color; */
+    -moz-column-rule: 4px outset #ff00ff;
+    -webkit-column-rule: 4px outset #ff00ff;
+    column-rule: 4px outset #ff00ff;
+  }
+
+  .columns h2 {
+    /* column-span: 1|all; */
+    column-span: all;
+    -webkit-column-span: all;
+  }
+
+  .count-width {
+    -moz-column-count: 3;
+    -webkit-column-count: 3;
+    column-count: 4;
+    column-width: 100px;
+    -moz-column-width: 100px;
+    -webkit-column-width: 100px;
+  }
+</style>
+<div class="columns">
+  <h2>《好了歌》出自清代曹雪芹作品《红楼梦》破足道人之口</h2>
+  世人都晓神仙好,惟有功名忘不了!  古今将相在何方?荒冢一堆草没了。
+  世人都晓神仙好,只有金银忘不了!  终朝只恨聚无多,及到多时眼闭了。
+  世人都晓神仙好,只有娇妻忘不了!  君生日日说恩情,君死又随人去了。
+  世人都晓神仙好,只有儿孙忘不了!  痴心父母古来多,孝顺儿孙谁见了?
+  忠义荡然，儒溺千古。 大爱无情，佛灭众生。 天地不仁，道吞万物。
+</div>
+<br />
+<div class="count-width">
+  “当我年轻的时候，我梦想改变这个世界；当我成熟以后，我发现我不能够改变这个世界，我将目光缩短了些，决定只改变我的国家；当我进入暮年以后，我发现我不能够改变我们的国家，我的最后愿望仅仅是改变一下我的家庭，但是，这也不可能。当我现在躺在床上，行将就木时，我突然意识到：如果一开始我仅仅去改变我自己，然后，我可能改变我的家庭；在家人的帮助和鼓励下，我可能为国家做一些事情；然后，谁知道呢?我甚至可能改变这个世界。”
+</div>
+```
 
 :::
