--- a/src/notes/02css/05.md
+++ b/src/notes/02css/05.md
@@ -1,16 +1,157 @@
 :::snippet CSS3 动画属性
 
-| 属性                        | 描述                                                                 |
-| --------------------------- | -------------------------------------------------------------------- |
-| `@keyframes`                | 定义一个动画,@keyframes 定义的动画名称用来被 animation-name 所使用。 |
-| `animation`                 | 复合属性。检索或设置对象所应用的动画特效。                           |
-| `animation-name`            | 检索或设置对象所应用的动画名称 ,必须与规则@keyframes 配合使用。      |
-| `animation-duration`        | 检索或设置对象动画的持续时间                                         |
-| `animation-timing-function` | 检索或设置对象动画的过渡类型                                         |
-| `animation-delay`           | 检索或设置对象动画的延迟时间                                         |
-| `animation-iteration-count` | 检索或设置对象动画的循环次数                                         |
-| `animation-direction`       | 检索或设置对象动画在循环中是否反向运动                               |
-| `animation-play-state`      | 检索或设置对象动画的状态                                             |
+animation: name duration timing-function delay iteration-count direction fill-mode play-state;
+
+| 属性                        | 描述                                                            |
+| --------------------------- | --------------------------------------------------------------- |
+| `@keyframes`                | 定义一个动画,@keyframes 定义的动画名称 animation-name 所使用。  |
+| `animation`                 | 复合属性。检索或设置对象所应用的动画特效。                      |
+| `animation-name`            | 检索或设置对象所应用的动画名称 ,必须与规则@keyframes 配合使用。 |
+| `animation-duration`        | 检索或设置对象动画的持续时间                                    |
+| `animation-timing-function` | 检索或设置对象动画的过渡类型                                    |
+| `animation-delay`           | 检索或设置对象动画的延迟时间                                    |
+| `animation-iteration-count` | 检索或设置对象动画的循环次数                                    |
+| `animation-direction`       | 检索或设置对象动画在循环中是否反向运动                          |
+| `animation-play-state`      | 检索或设置对象动画的状态                                        |
+
+```html
+<style>
+  @keyframes myanimation1 {
+    from {
+      left: 0px;
+    }
+    to {
+      left: 200px;
+    }
+  }
+  @-webkit-keyframes myanimation1 {
+    from {
+      left: 0px;
+    }
+    to {
+      left: 200px;
+    }
+  }
+  div.animation1 {
+    width: 100px;
+    height: 100px;
+    background: red;
+    position: relative;
+    /* animation: name duration timing-function; */
+    animation: myanimation1 5s infinite;
+    -webkit-animation: myanimation1 5s infinite;
+  }
+  @keyframes animation2 {
+    0% {
+      top: 0px;
+      left: 0px;
+      background: red;
+    }
+    25% {
+      top: 0px;
+      left: 100px;
+      background: blue;
+    }
+    50% {
+      top: 100px;
+      left: 100px;
+      background: yellow;
+    }
+    75% {
+      top: 100px;
+      left: 0px;
+      background: green;
+    }
+    100% {
+      top: 0px;
+      left: 0px;
+      background: red;
+    }
+  }
+  @-webkit-keyframes animation2 {
+    0% {
+      top: 0px;
+      left: 0px;
+      background: red;
+    }
+    25% {
+      top: 0px;
+      left: 100px;
+      background: blue;
+    }
+    50% {
+      top: 100px;
+      left: 100px;
+      background: yellow;
+    }
+    75% {
+      top: 100px;
+      left: 0px;
+      background: green;
+    }
+    100% {
+      top: 0px;
+      left: 0px;
+      background: red;
+    }
+  }
+  div.animation2 {
+    width: 100px;
+    height: 100px;
+    background: red;
+    position: relative;
+    animation: animation2 1s infinite;
+    -webkit-animation: animation2 1s infinite;
+    animation-delay: 2s;
+    -webkit-animation-delay: 2s;
+    animation-iteration-count: 4;
+    -webkit-animation-iteration-count: 4;
+    animation-direction: alternate;
+    -webkit-animation-direction: alternate;
+    /* animation-play-state 动画停止或者运行 */
+    /* animation-play-state:paused; */
+    /* -webkit-animation-play-state:paused; */
+  }
+
+  div.animation3 {
+    width: 100px;
+    height: 100px;
+    background: red;
+    position: relative;
+    animation: animation3 1s infinite;
+    -webkit-animation: animation3 1s infinite;
+  }
+  @keyframes animation3 {
+    0% {
+      top: 0px;
+      background: red;
+      width: 100px;
+    }
+    100% {
+      top: 200px;
+      background: yellow;
+      width: 300px;
+    }
+  }
+  @-webkit-keyframes animation3 {
+    0% {
+      top: 0px;
+      background: red;
+      width: 100px;
+    }
+    100% {
+      top: 200px;
+      background: yellow;
+      width: 300px;
+    }
+  }
+</style>
+<div class="animation1"></div>
+<br />
+<div class="animation2"></div>
+<br />
+<div class="animation3"></div>
+```
 
 :::
 
@@ -25,9 +166,194 @@
 | `perspective-origin`  | 指定 3D 元素底部位置                       |
 | `backface-visibility` | 定义一个元素是否应该是可见的，不对着屏幕时 |
 
+```html
+<style>
+  *,
+  *:after,
+  *:before {
+    box-sizing: border-box;
+  }
+  body {
+    background: #f5f3f4;
+    margin: 0;
+    padding: 10px;
+    font-family: "Open Sans", sans-serif;
+    text-align: center;
+  }
+  h1 {
+    color: #4c4c4c;
+    font-weight: 600;
+    border-bottom: 1px solid #ccc;
+  }
+  h2,
+  h4 {
+    font-weight: 400;
+    color: #4d4d4d;
+  }
+  .card {
+    display: inline-block;
+    margin: 10px;
+    background: #fff;
+    padding: 15px;
+    min-width: 200px;
+    box-shadow: 0 3px 5px #ddd;
+    color: #555;
+  }
+  .card .box {
+    width: 100px;
+    height: 100px;
+    margin: auto;
+    background: #ddd;
+    cursor: pointer;
+    box-shadow: 0 0 5px #ccc inset;
+  }
+  .card .box .fill {
+    width: 100px;
+    height: 100px;
+    position: relative;
+    background: #03a9f4;
+    opacity: 0.5;
+    box-shadow: 0 0 5px #ccc;
+    -webkit-transition: 0.3s;
+    transition: 0.3s;
+  }
+  .card p {
+    margin: 25px 0 0;
+  }
+  .rotate:hover .fill {
+    -webkit-transform: rotate(45deg);
+    transform: rotate(45deg);
+    /* rotateX(45deg);rotateY(45deg);*/
+  }
+  .scale:hover .fill {
+    -webkit-transform: scale(2, 2);
+    transform: scale(2, 2);
+    transform: scaleX(2);
+    transform: scaleY(2);
+  }
+  .skew:hover .fill {
+    -webkit-transform: skew(45deg, 45deg);
+    transform: skew(45deg, 45deg);
+    /* skewX(45deg);skewY(45deg); */
+  }
+  .translate:hover .fill {
+    -webkit-transform: translate(45px, 1em);
+    transform: translate(45px, 1em);
+    /*  translateX(45px);translateY(45px); */
+  }
+  .matrix:hover .fill {
+    -webkit-transform: matrix(2, 2, 0, 2, 45, 0);
+    transform: matrix(2, 2, 0, 2, 45, 0);
+  }
+  .perspective-100 .box {
+    -webkit-perspective: 100px;
+    perspective: 100px;
+  }
+  .perspective-200 .box {
+    -webkit-perspective: 200px;
+    perspective: 200px;
+  }
+  .to-100-0-0 {
+    -webkit-transform-origin: 100% 0 0;
+    transform-origin: 100% 0 0;
+  }
+  .to-0-100-0 {
+    -webkit-transform-origin: 0 100% 0;
+    transform-origin: 0 100% 0;
+  }
+</style>
+<h1>Css3 Transform</h1>
+<!-- Rotate-->
+<div class="card">
+  <div class="box rotate">
+    <div class="fill"></div>
+  </div>
+  <p>rotate(45deg)</p>
+</div>
+<br />
+<!-- scale-->
+<div class="card">
+  <div class="box scale">
+    <div class="fill"></div>
+  </div>
+  <p>scale(2)</p>
+</div>
+<br />
+<!-- skew-->
+<div class="card">
+  <div class="box skew">
+    <div class="fill"></div>
+  </div>
+  <p>skew(45deg, 45deg)</p>
+</div>
+<br />
+<!-- translate-->
+<div class="card">
+  <div class="box translate">
+    <div class="fill"></div>
+  </div>
+  <p>translate(45px)</p>
+</div>
+
+<div class="card">
+  <div class="box matrix">
+    <div class="fill"></div>
+  </div>
+  <p>matrix(2, 2, 0, 2, 45, 0)</p>
+</div>
+<h4>Perspective : 100</h4>
+<div class="perspective-100">
+  <div class="card">
+    <div class="box rotate">
+      <div class="fill"></div>
+    </div>
+    <p>rotate(90deg)</p>
+  </div>
+</div>
+<h4>Perspective : 200</h4>
+<div class="perspective-200">
+  <div class="card">
+    <div class="box rotate">
+      <div class="fill"></div>
+    </div>
+    <p>rotate(90deg)</p>
+  </div>
+</div>
+<br />
+<!-- transform origin-->
+<h2>Transform origin</h2>
+<div class="card">
+  <div class="box rotate">
+    <div class="fill to-100-0-0"></div>
+  </div>
+  <p>transform-origin : 100% 0 0 <br />rotate(45deg)</p>
+</div>
+<div class="card">
+  <div class="box rotate">
+    <div class="fill to-0-100-0"></div>
+  </div>
+  <p>transform-origin : 0 100% 0<br />rotate(45deg)</p>
+</div>
+<div class="card">
+  <div class="box scale">
+    <div class="fill to-100-0-0"></div>
+  </div>
+  <p>transform-origin : 100% 0 0<br />scale(2)</p>
+</div>
+<div class="card">
+  <div class="box scale">
+    <div class="fill to-0-100-0"></div>
+  </div>
+  <p>transform-origin : 0 100% 0<br />scale(2)</p>
+</div>
+```
+
 :::
 
 :::snippet CSS3 过渡（Transition） 属性
+
+transition: property duration timing-function delay;
+transition: all 0 ease 0
 
 | 属性                         | 描述                          |
 | ---------------------------- | ----------------------------- |
@@ -36,5 +362,27 @@
 | `transition-duration`        | 设置过渡进行的时间长度。      |
 | `transition-timing-function` | 设置过渡进行的时序函数。      |
 | `transition-delay`           | 指定过渡开始的时间。          |
+
+```html
+<style>
+  div.transition {
+    width: 100px;
+    height: 100px;
+    background: red;
+    transition: width 2s linear 2s;
+    -webkit-transition: width 2s linear 2s;
+    /* transition-property: width; */
+    /* transition-duration: 2s; */
+    /* transition-timing-function: linear;*/
+    /* transition-delay: 2s; */
+  }
+
+  div:hover {
+    width: 300px;
+  }
+</style>
+<div class="transition"></div>
+<p>鼠标移动到 div 元素上，查看过渡效果。</p>
+```
 
 :::
