--- a/src/notes/03js/03typescript/14.md
+++ b/src/notes/03js/03typescript/14.md
@@ -1,47 +1,71 @@
 :::snippet 模块介绍
 
 1. 模块在其自身的作用域里执行，而不是在全局作用域里；定义在一个模块里的变量，函数，类等等在模块外部是不可见的。
-2. 使用export形式之一导出它们。 使用 import形式之一导入它们。
-3. 任何包含顶级import或者export的文件都被当成一个模块。
-4. 如果一个文件不带有顶级的import或者export声明，那么它的内容被视为全局可见的（因此对模块也是可见的）。
+2. 使用 export 形式之一导出它们。 使用 import 形式之一导入它们。
+3. 任何包含顶级 import 或者 export 的文件都被当成一个模块。
+4. 如果一个文件不带有顶级的 import 或者 export 声明，那么它的内容被视为全局可见的（因此对模块也是可见的）。
 
 :::
 
-:::snippet 代码生成
+:::snippet 导出
+
+任何声明（比如变量，函数，类，类型别名或接口）都能够通过添加 export 关键字来导出。
+
+```typescript
+export interface StringValidator {
+  isAcceptable(s: string): boolean;
+}
+export const numberRegexp = /^[0-9]+$/;
+
+export class ZipCodeValidator implements StringValidator {
+  isAcceptable(s: string) {
+    return s.length === 5 && numberRegexp.test(s);
+  }
+}
+
+class ZipCodeValidator implements StringValidator {
+  isAcceptable(s: string) {
+    return s.length === 5 && numberRegexp.test(s);
+  }
+}
+export { ZipCodeValidator };
+//一个模块可以包裹多个模块，并把他们导出的内容联合在一起通过语法：export * from "module"。
+export * from "./StringValidator";
+```
+
 :::
 
-:::snippet 代码生成
+:::snippet 导入
+
+```typescript
+import { ZipCodeValidator } from "./ZipCodeValidator";
+
+let myValidator = new ZipCodeValidator();
+//导入内容重命名
+import { ZipCodeValidator as ZCV } from "./ZipCodeValidator";
+let myValidator = new ZCV();
+//将整个模块导入到一个变量，并通过它来访问模块的导出部分
+import * as validator from "./ZipCodeValidator";
+let myValidator = new validator.ZipCodeValidator();
+```
+
 :::
 
-:::snippet 代码生成
-:::
+:::snippet 默认导出导入
 
-:::snippet 代码生成
-:::
+JQuery.ts 导出
 
-:::snippet 代码生成
-:::
+```typescript
+declare let $: JQuery;
+export default $;
+```
 
-:::snippet 代码生成
-:::
+App.ts 导入
 
-:::snippet 代码生成
-:::
+```typescript
+import $ from "JQuery";
 
-:::snippet 代码生成
-:::
+$("button.continue").html("Next Step...");
+```
 
-:::snippet 代码生成
-:::
-
-:::snippet 代码生成
-:::
-
-:::snippet 代码生成
-:::
-
-:::snippet 代码生成
-:::
-
-:::snippet 代码生成
 :::
